Configure test postgres, add controller unit tests